--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 </head>
 <body>
-  <h1>🌱 GreenHouse Monitoring System</h1>
+  <h1>GreenHouse Monitoring System</h1>
   <div class="settings-icon" id="settings-icon">
     <i class="fas fa-wrench"></i>
   </div>
