update web app and backend reqs

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -14,6 +14,7 @@
       <h3>Devices</h3>
       <select id="device-list"></select>
       <button id="add-device-btn">Add Device</button>
+      <button id="remove-device-btn" style="background:#ff8888; color:#222;">Remove Device</button>
     </div>
     <div class="settings-icon" id="settings-icon">
       <i class="fas fa-wrench"></i>
@@ -62,5 +63,6 @@
     <span id="status-text">Last Update: No data received yet.</span>
   </div>
   <script src="app.js"></script>
+  <script src="registerDevice.js"></script>
 </body>
 </html>
