--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -49,13 +49,13 @@
   </div>
   <div class="container">
     <div class="group" id="group1">
-      <h2>🔆 Light, PIR & Lamp</h2>
+      <h2><i class="fas fa-lightbulb" style="color: #e0d254;"></i> Main Lamp Control info</h2>
     </div>
     <div class="group" id="group2">
-      <h2>💧 Level, Fault & Pump</h2>
+      <h2><i class="fas fa-water" style="color: #1a89e4;" ></i> Cistern level Control info</h2>
     </div>
     <div class="group" id="group3">
-      <h2>🌡️ Temperature & Humidity</h2>
+      <h2><i class="fas fa-tint" style="color: #569cd6;"></i> Main Irrigation control info</h2>
     </div>
   </div>
   <div id="status" style="text-align:center; margin-top: 20px; font-size: 14px; color: #aaa;">
